# Assistente-de-planilha

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  ROADMAP.md  api_main.py  api_sidecar.py  main.py  netlify.toml  package-lock.json  package.json  requirements.txt  tsconfig.json  web_main.py
db/: schema.ts
desktop/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  ErrorBoundary.tsx  api.ts  main.tsx  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
finance_app/: __init__.py
finance_app/api/: __init__.py  app.py
finance_app/domain/: __init__.py  constants.py  dates.py  money.py
finance_app/services/: __init__.py  finance_service.py
finance_app/storage/: database.py  seed.py
finance_app/ui/: __init__.py  app.py  calendar_picker.py
finance_app/web/: __init__.py  server.py
finance_app/web/static/: app.js  index.html  privacy.html  styles.css
functions/api/: [[path]].ts
netlify/functions/: api-admin-user.ts  api-admin-users.ts  api-categories.ts  api-change-password.ts  api-delete-category.ts  api-delete.ts  api-entries.ts  api-initial-invested.ts  api-login.ts  api-profile.ts  api-register.ts  api-state.ts  api-toggle.ts
netlify/functions/lib/: auth.ts  constants.ts  dates.ts  finance.ts  money.ts  seed.ts  supabase.ts
scripts/: build_sidecar.ps1  setup_python_path.ps1  start_api.ps1  start_desktop_front.ps1  use_python_in_this_shell.ps1
supabase/: schema.sql
tests/: test_finance_service.py
(+6 files in other folders)
