[package]
name = "financeiro_desktop"
version = "0.1.0"
description = "Controle financeiro desktop"
authors = ["Ricardo"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
